--- a/eepromset/eepromset/config.ini
+++ b/eepromset/eepromset/config.ini
@@ -5,6 +5,12 @@ ulmin=3550000
 ulmax=3700000
 hwcap=0xa0000001
 
+[mBS2130]
+dlmin=3550000
+dlmax=3700000
+ulmin=3550000
+ulmax=3700000
+hwcap=0xa0000001
 
 [pBS2120]
 dlmin=3550000
@@ -17,6 +23,34 @@ hwcap=0xa0000001
 dlmin=3550000
 dlmax=3700000
 ulmin=3550000
+ulmax=3700000
+hwcap=0xa0000001
+
+[mBS11001]
+dlmin=3550000
+dlmax=3700000
+ulmin=3550000
+ulmax=3700000
+hwcap=0xa0000001
+
+[mBS11003]
+dlmin=3550000
+dlmax=3700000
+ulmin=3550000
+ulmax=3700000
+hwcap=0xa0000001
+
+[IDRB1002]
+dlmin=1000000
+dlmax=3700000
+ulmin=1000000
+ulmax=3700000
+hwcap=0xa0000001
+
+[MGOB1000]
+dlmin=1000000
+dlmax=3700000
+ulmin=1000000
 ulmax=3700000
 hwcap=0xa0000001
 
