--- a/libatecard/libatecard/libatecard.vcxproj.filters
+++ b/libatecard/libatecard/libatecard.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="libatecard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="inner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
