--- a/atedfu/atedfu/atedfu.vcxproj
+++ b/atedfu/atedfu/atedfu.vcxproj
@@ -58,7 +58,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>libatecard.lib</AdditionalDependencies>
+      <AdditionalDependencies>libatecard_dll.lib</AdditionalDependencies>
       <AdditionalOptions>/FORCE:MULTIPLE %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <Midl>
